# game_of_patterns

./: .gitignore  CMakeLists.txt  README.md  game_of_patterns  main.cpp
include/: common.h
include/commands/: command.h  moves.hpp
include/controller/: field_controller.h  states.h  states_interface.h
include/game_objects/: behavior_types.hpp  buffs.h  enemy.hpp  npc.h  player.h  random_step_npc.h  standing_npc.h  wandering_enemy.h
include/graphics/: draw.h  file_dialog.h  renderer.h  sprite_info.h  sprites_paths.h
include/lib/: my_container.hpp  raii_file.hpp  serialize.hpp  type_checkers.h  unit_testing.hpp
include/logging/: base_logger.h  field_logger.h  file_logger.hpp  listener.h  notifier.h  stream_logger.hpp
include/model/: cell.h  elements_strategies.h  field.h
include/snapshots/: field_snapshot.h  snapshot.h
include/tests/: cell_test.h  commands_test.h  container_test.h  field_test.h  raii_file_test.h  snapshot_test.h
src/controller/: field_controller.cpp  states.cpp
src/game_objects/: npc.cpp  player.cpp  random_step_npc.cpp  standing_npc.cpp  wandering_enemy.cpp
src/graphics/: draw.cpp  renderer.cpp
src/logging/: field_logger.cpp  notifier.cpp
src/model/: cell.cpp  elements_strategies.cpp  field.cpp
src/snapshots/: field_snapshot.cpp
